syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "user.proto";

option go_package = "github.com/bacnx/simplebank/pb";

message LoginUserRequest {
  string username = 1;
  string password = 2;
}

message LoginUserResponse {
  string access_token = 1;
  google.protobuf.Timestamp access_token_expires_at = 2;
  string refresh_token = 3;
  google.protobuf.Timestamp refresh_token_expires_at = 4;
  User user = 5;
}
